@@ -1,3 +1,13 @@
+2011-10-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-rfn-eshadow-update-overlay): Ignore errors.  Let
+	`file-name-handler-alist' be nil, the local file name part could
+	look remotely (for example on VMS).  (Bug#6019, Bug#9315)
+	(tramp-do-copy-or-rename-file-out-of-band): Use
+	`tramp-file-name-real-host' for `tramp-current-host'.
+	(tramp-process-actions): Set "first-password-request" property for
+	the correct connection in case of multihops.
+
 2011-08-03  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-open-connection-setup-interactive-shell)
